hphp/hack/test/typecheck/parse_float_with_underscore_bad3.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class BigNumbersRUs {
  const float fp3 = 1_e1;
}
